@@ -44,7 +44,7 @@ type
 
 const
   cdcversion = 'Version 3.9-svn';
-  cdcver = '3.9b';
+  cdcver = '3.9c';
   cdccpy = 'Copyright (C) 2002-2013 Patrick Chevalley';
   cdcauthors = 'Patrick Chevalley, pch@ap-i.net' + crlf +
     'Peter Dean,' + crlf + 'John Sunderland' + crlf  + 'Anat Ruangrassamee';
