@@ -1431,6 +1431,7 @@ resourcestring
   rsAdvancedSett2 = 'Advanced setting';
   rsDoNotChangeA = 'Do not change anything here if you are not sure what you do!';
   rsForceEqSys = 'Force EqSys';
+  rsBrightest = 'Brightest';
 
 implementation
 
